Enhance WC Logrono 2025 Talk plugin functionality
- Updated `package.json` to enable experimental modules for improved script handling.
- Added new block patterns and interactivity scripts in `wc-logrono-2025-talk.php`.
- Registered hooks for block patterns, styles, and interactivity to streamline initialization.
- Refined error handling in `register-source-block-binding.php` with logging for better debugging of API interactions.
- Removed redundant action registration in `register-block-styles.php` to clean up the codebase.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WordPress plugin for WC Logrono 2025 Talk, demonstrating block bindings and Interactivity API.",
   "main": "index.js",
   "scripts": {
-    "start": "wp-scripts start",
-    "build": "wp-scripts build"
+    "start": "wp-scripts start --experimental-modules",
+    "build": "wp-scripts build --experimental-modules"
   },
   "keywords": [],
   "author": "",
